src/css/style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  width: 1920px;
}

@font-face {
  font-family: Gilroy-Bold;
  src: url(../fonts/Gilroy-Bold.ttf);
}

/* ── HEADER ── */

header {
  text-align: center;
  margin: 21px 0px;
  a {
    text-decoration: none;
  }

  img {
    width: 36px;
    margin-right: 6px;
  }
  img,
  nav,
  .logo,
  li {
    display: inline-block;
    vertical-align: middle;
  }
}

nav {
  font-size: 18px;
  font-family: "Lato", sans-serif;
  margin-left: 395px;
  a {
    color: #2e7af4;
  }
}

.logo {
  font-size: 30px;
  font-family: "Alien Block", sans-serif;
  font-weight: bold;
  color: #2e7af4;
}

.link {
  margin: 0px 55px;
}

.register {
  background-color: #2e7af4;
  padding: 12px 24px;
  color: white;
}

/* ── HERO ── */

.hero {
  margin: 19px 0px;
}

.maintext {
  margin: 10px 0px;
  position: absolute;
  top: 280px;
  left: 280px;

  .p1 {
    font-size: 20px;
    color: #2e7af4;
    font-family: "Open Sans", sans-serif;
    font-weight: bold;
    text-transform: uppercase;
  }
  h1 {
    font-size: 90px;
    max-width: 558px;
    font-family: "Lato", sans-serif;
    font-weight: 900;
  }

  .p2 {
    font-size: 18px;
    max-width: 580px;
    font-family: "Open Sans", sans-serif;
  }

  button {
    margin-top: 55px;
    font-size: 18px;
    padding: 14px 40px;
    border: none;
    background-color: #2e7af4;
    color: white;
    border-radius: 3px;
    font-family: "Lato", sans-serif;
  }
}

/* ── About Us ── */
@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
.aboutus div {
  display: flex;
  flex-direction: column;
  margin: 205px 55px 251px 150px;
}
.aboutus {
  display: flex;
}
.aboutus img {
  max-width: 632px;
  min-height: 745px;
  margin: 205px 150px 251px 0px;
  border-radius: 30px;
}
.first {
  font-family:
    system-ui,
    -apple-system,
    BlinkMacSystemFont,
    "Segoe UI",
    Roboto,
    Oxygen,
    Ubuntu,
    Cantarell,
    "Open Sans",
    "Helvetica Neue",
    sans-serif;
  font-weight: 600;
  font-size: 20px;
  line-height: 25px;
  color: #2e7af4;
  margin-bottom: 10px;
}
.aboutus div h2 {
  font-family: "Lato", sans-serif;
  font-weight: 800;
  font-size: 50px;
  line-height: 100%;
  margin-bottom: 38px;
}
.description {
  font-family:
    system-ui,
    -apple-system,
    BlinkMacSystemFont,
    "Segoe UI",
    Roboto,
    Oxygen,
    Ubuntu,
    Cantarell,
    "Open Sans",
    "Helvetica Neue",
    sans-serif;
  font-size: 20px;
  font-weight: 400;
  line-height: 35px;
  color: #00000080;
  margin-top: 20px;
}
.videobutton {
  background-color: #2e7af4;
  color: white;
  font-family: "Lato", sans-serif;
  font-weight: 700;
  font-size: 20px;
  width: 244px;
  height: 73px;
  border-radius: 4px;
  border: none;
  margin-top: 30px;
}

/* ── Our Team ── */
.our-team {
  position: relative;
  background-color: #f8f8f8;
  padding: 39px 278.59px 66px 275px;
  overflow: hidden;
}

.our-team__label {
  font-family: "Open Sans", sans-serif;
  font-size: 20px;
  font-weight: 600;
  text-transform: uppercase;
  color: #2e7af4;
  margin-bottom: 8px;
}

.our-team__title {
  font-family: "Gilroy-Bold", sans-serif;
  font-size: 50px;
  font-weight: 400;
  color: #000000;
  margin-bottom: 45px;
}

.our-team__list {
  list-style: none;
}

.our-team__item {
  display: inline-block;
  vertical-align: top;
  margin-right: 25.59px;
}

.our-team__item:nth-child(even) {
  margin-right: 26.59px;
}

.our-team__item:last-child {
  margin-right: 0;
}

.our-team__card {
  display: block;
  width: 253.41px;
  background-color: #ffffff;
  border-radius: 8px;
  padding: 24.29px 30.9px 55px 31.34px;
  text-align: center;
  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.07);
  margin: 0;
}

.our-team__img-wrap {
  display: block;
  width: 191.17px;
  height: 191.17px;
  border-radius: 50%;
  overflow: hidden;
}

.our-team__img {
  display: block;
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.our-team__name {
  display: block;
  font-family: "Open Sans", sans-serif;
  font-size: 20px;
  font-weight: 700;
  color: #555555;
  margin-top: 17.54px;
}

.our-team__deco {
  position: absolute;
}

.our-team__deco--bl {
  width: 44.82px;
  height: 44.82px;
  background-color: #ffeeb0;
  bottom: 57.63px;
  left: 108px;
  transform: rotate(45deg);
}

.our-team__deco--br {
  width: 164.06px;
  height: 164.06px;
  background-color: #ffeeb0b0;
  bottom: 157.04px;
  right: -99px;
  overflow: hidden;
  transform: rotate(45deg);
}

/* ── Mission and Vision ── */

